Fixed list hover on mobile

--- a/src/app/components/events-list/events-list.component.scss
+++ b/src/app/components/events-list/events-list.component.scss
@@ -50,18 +50,20 @@
             font-size: .75em;
         }
     }
+}
 
+@media only screen and (min-width: 700px) {
     .list-item:hover {
         background: $primary-dark;
         transform: scaleY(1.1);
         cursor: pointer;
         h2 {
-            color: white;
+            color: white!important;
             overflow: hidden;
         }
 
         p {
-            color: white;
+            color: white!important;
         }
     }
 }
